[workspace]
members = ["bundler", "dino", "dino-macros", "dino-server"]
resolver = "2"

[workspace.dependencies]
bundler = { path = "bundler" }
dino-macros = { path = "dino-macros" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
