[package]
name = "dino-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
dashmap = "6.1.0"
dino-macros = { workspace = true }
indexmap = { version = "2.5.0", features = ["serde"] }
matchit = "0.7"
oneshot = "0.1.8"
rquickjs = { version = "0.6.2", features = ["full"] }
rquickjs-macro = "0.6.2"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
thiserror = "1.0.63"
tokio = { workspace = true }
tower = "0.5.0"
tracing = { workspace = true }
tracing-subscriber = "0.3.18"
typed-builder = "0.20.0"
