[package]
name = "dino"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
blake3 = "1.5.4"
bundler = { workspace = true }
clap = { version = "4.5.16", features = ["derive"] }
derive_builder = "0.20.1"
dialoguer = { version = "0.11.0", features = [
    "completion",
    "fuzzy-matcher",
    "fuzzy-select",
    "history",
] }
dino-server = { workspace = true }
enum_dispatch = "0.3.13"
git2 = { version = "0.19.0", default-features = false }
glob = "0.3.1"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
tokio = { workspace = true }
tokio-stream = "0.1.16"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
